--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #div1 {
-  background-image: url("https://picsum.photos/id/237/200/300");
+  background-image: url("https://images.unsplash.com/photo-1682686581660-3693f0c588d2?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   height: 300px;
   width: 200px;
   margin: 20px;
